syntax = "proto3";

package storagelocv1;

option go_package = "github.com/deadsnxcks/dbcp/protos/proto/storageloc;storagelocv1";

import "google/protobuf/timestamp.proto";

service StorageLocationService {
    rpc List    (ListRequest)   returns (ListResponse);
    rpc Create  (CreateRequest) returns (CreateResponse);
    rpc Delete  (DeleteRequest) returns (DeleteResponse);
    rpc Get     (GetRequest)    returns (GetResponse);
    rpc Update  (UpdateRequest) returns (UpdateResponse);
    rpc Use     (UseRequest)    returns (UseResponse);
    rpc Reset   (ResetRequest)  returns (ResetResponse);
}

message StorageLocation {
    int64 id = 1;
    int64 cargo_type_id = 2;
    double max_weight = 3;
    double max_volume = 4;
    optional int64 cargo_id = 5;
    optional google.protobuf.Timestamp date_of_placement = 6;
}

message ListRequest {}
message ListResponse {
    repeated StorageLocation storage_locations = 1;
}

message GetRequest {
    int64 id = 1;
}
message GetResponse {
    StorageLocation storage_location = 1;
}

message CreateRequest {
    int64 cargo_type_id = 1;
    double max_weight = 2;
    double max_volume = 3;
}
message CreateResponse {
    int64 id = 1;
}

message UpdateRequest {
    int64 id = 1;
    optional int64 cargo_type_id = 2;
    optional double max_weight = 3;
    optional double max_volume = 4;
}
message UpdateResponse {}

message DeleteRequest {
    int64 id = 1;
}
message DeleteResponse {}

message UseRequest {
    int64 storage_location_id = 1;
    int64 cargo_id = 2;
    google.protobuf.Timestamp date_of_placement = 3;
}
message UseResponse {}

message ResetRequest {
    int64 id = 1;
}
message ResetResponse {}